--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "start_met_gulp",
   "version": "1.0.0",
   "description": "Dit is een voorbeeld van gulp en scss",
-  "main": "index.html",
-  "dependencies": {
-    "gulp-cli": "^2.0.1",
-    "gulp": "^3.9.1"
-  },
-  "devDependencies": {
-    "gulp-sass": "^4.0.2",
-    "node-sass": "^4.10.0"
-  },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sterre Schuil",
-  "license": "ISC"
+  "author": "Annelotte Fellinger",
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.10.0"
+  }
 }
